# vidgen-pro

./: LICENSE  README.md  ai_video_editor.py  ai_video_editor_builder.py  docker-compose.yml  pyproject.toml  requirements.txt
tests/: test_analyzer.py
vidgen_pro/core/: analyzer.py  thumbnail.py  visuals.py  voice.py
vidgen_pro/editor/: builder.py
vidgen_pro/ui/: app.py
vidgen_pro/utils/: config.py
