[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidgen-pro"
version = "0.1.0"
description = "Production-grade AI Video Editor: Script to Video Automation"
authors = [
  { name = "Shivay00001", email = "shivay@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.30.0",
    "google-generativeai>=0.3.2",
    "moviepy>=1.0.3",
    "edge-tts>=6.1.9",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.2.0",
    "openai-whisper>=20231117",
]

[project.urls]
"Homepage" = "https://github.com/Shivay00001/vidgen-pro"
"Bug Tracker" = "https://github.com/Shivay00001/vidgen-pro/issues"

[project.scripts]
vidgen-pro = "vidgen_pro.ui.app:main"
